--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -705,6 +705,11 @@ if(ARROW_WITH_ZSTD)
   endif()
 endif()
 
+if(ARROW_WITH_FASTPFOR)
+  list(APPEND ARROW_STATIC_LINK_LIBS FastPFOR::FastPFOR)
+  list(APPEND ARROW_STATIC_INSTALL_INTERFACE_LIBS FastPFOR::FastPFOR)
+endif()
+
 if(ARROW_ORC)
   list(APPEND ARROW_LINK_LIBS orc::liborc ${ARROW_PROTOBUF_LIBPROTOBUF})
   list(APPEND ARROW_STATIC_LINK_LIBS orc::liborc ${ARROW_PROTOBUF_LIBPROTOBUF})
